# Labs4sem

./: .gitignore  README.md
lab1/: CMakeLists.txt  cat.cpp  cilinder.cpp  circle.cpp  cube.cpp  thor.cpp  thor.stl  tor.stl  torus.cpp
lab2/: CMakeLists.txt
lab2/cat/: CMakeLists.txt  cat.cpp
lab2/cubic2d/: CMakeLists.txt  cubic2d.cpp
lab2/cubic3d/: CMakeLists.txt  cubic3d.cpp
lab2/tetr3d/: CMakeLists.txt  tetr3d.cpp
lab3/heat/: heat_example.py  heat_solution.pvd  pressure.pvd  temp_and_vel.py  temp_vel_v2.py  temp_vel_v3.py  temperature.pvd  velocity.pvd
lab3/test/: test.py
project/: CMakeLists.txt
project/include/: Simulation.hpp  VTKWriter.hpp
project/output/output/: frame_0.vtp  frame_1.vtp  frame_10.vtp  frame_11.vtp  frame_12.vtp  frame_13.vtp  frame_14.vtp  frame_15.vtp  frame_16.vtp  frame_17.vtp  frame_18.vtp  frame_19.vtp  frame_2.vtp  frame_20.vtp  frame_21.vtp  frame_22.vtp  frame_23.vtp  frame_24.vtp  frame_25.vtp  frame_26.vtp  frame_27.vtp  frame_28.vtp  frame_29.vtp  frame_3.vtp  frame_30.vtp  frame_31.vtp  frame_32.vtp  frame_33.vtp  frame_34.vtp  frame_35.vtp  frame_36.vtp  frame_37.vtp  frame_38.vtp  frame_39.vtp  frame_4.vtp  frame_40.vtp  frame_41.vtp  frame_42.vtp  frame_43.vtp  frame_44.vtp  (+20 more)
project/src/: Simulation.cpp  VTKWriter.cpp  main.cpp
